charon/tests/ui/simple/coroutine.out
error: Coroutine types are not supported yet
 --> tests/ui/simple/coroutine.rs:2:1
  |
2 | pub async fn f() {}
  | ^^^^^^^^^^^^^^^^^^^

error: Coroutines are not supported
 --> tests/ui/simple/coroutine.rs:2:18
  |
2 | pub async fn f() {}
  |                  ^^

ERROR Charon failed to translate this code (2 errors)
