charon/tests/ui/simple/coroutine.rs
//@ known-failure
pub async fn f() {}
